Fixes #14573: JS error in rule pages, and Directives don't show in the list of directives

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentRuleEditForm.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentRuleEditForm.html
@@ -206,7 +206,7 @@
                     </div>
                   </div>
                 </div>
-                <div id="selectPiField"  class="col-xs-12" >
+                <div id="selectPiField"  class="col-xs-12" ng-non-bindable>
                   Here comes the Directive selection field
                 </div>
               </div>
@@ -310,7 +310,7 @@
                   </div>
                 </div>
               </div>
-              <div id="selectGroupField"  class="col-xs-12" >
+              <div id="selectGroupField"  class="col-xs-12" ng-non-bindable>
                 Here comes the Directive selection field
               </div>
             </div>
