Fixes #14611: We cannot remove excluded groups from the list

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-rules.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-rules.css
@@ -258,3 +258,22 @@ ul.applied-list > .add-target > .fa{
   position: relative;
   top: 1px;
 }
+
+#groupTree a.jstree-anchor{
+  cursor: default !important;
+}
+
+#groupTree a.jstree-anchor{
+  cursor: default !important;
+}
+
+#groupTree a.jstree-anchor.jstree-clicked{
+  background-color: transparent;
+  box-shadow: none !important;
+}
+#groupTree a.jstree-anchor.jstree-clicked:hover{
+  background-color: #e7f4f9;
+}
+#groupTree a.jstree-anchor .treeActions{
+  cursor: pointer !important;
+}
