--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentRuleEditForm.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentRuleEditForm.html
@@ -398,7 +398,7 @@
                    data-original-title="{{getTooltipContent(getTarget(excluded))}}"
                 ></i>
               </span>
-              <span class="target-remove" ng-click="removeInclude(excluded)">
+              <span class="target-remove" ng-click="removeExclude(excluded)">
                   <i class="fa fa-times"></i>
                 </span>
               <span class="border"></span>
