--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder.css
@@ -132,10 +132,10 @@ html {
 }
 
 div.intro {
-   margin: 5px 0px 0px 0px;
+   margin: 5px 0px 15px 0px;
    padding: 0px;
    width: 100%;
-   font-size: 1em;
+   font-size: 14px;
    line-height: 1.5em;
    color: #414141;
    background-color: #FFF9E1;
@@ -843,7 +843,8 @@ div.serverDetail {
 }
 
 div.tabInform {
-  padding:5px;
+  padding: 5px 0 10px 0;
+  font-size: 14px;
 }
 
 .reportLine {
