--- a/builder/css/custom.css
+++ b/builder/css/custom.css
@@ -543,6 +543,14 @@ body.iframe .Override.container {
 #categories-list li a{
   padding-left: 5px;
 }
+.container > .ncf_col.techniques_col{
+  padding-right: 0;
+}
+@media screen and (max-width: 768px) {
+  .container > .ncf_col.techniques_col{
+    padding-right: 15px;
+  }
+}
 @media screen and (min-width: 992px) {
   .container > .ncf_col{
     max-height: 100%;
@@ -884,6 +892,65 @@ ul.list-unstyled > li.active .edit-method:after{
 
 ul.list-unstyled > li.active .edit-method:after{
   background-color: #eee;
+}
+
+.techniques-list > .input-group{
+  margin: 10px 0;
+}
+.techniques-list > ul{
+  margin: 0;
+  list-style: none;
+}
+.techniques-list > ul > li{
+  border: 1px solid #e5e5e5;
+  border-bottom: 0;
+  padding: 4px 15px 4px 8px;
+  position: relative;
+  border-left: 4px solid #e5e5e5;
+  transition-duration: .2s;
+  transition-property: border-color, background-color, color, padding-left, padding-right;
+  cursor: pointer !important;
+  color: #333;
+  word-break: break-word;
+}
+.techniques-list > ul > li:hover{
+  padding-left: 15px;
+  padding-right: 8px;
+  background-color: #e2f2ff;
+}
+.techniques-list > ul > li:last-child{
+  border-bottom: 1px solid #e5e5e5;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.techniques-list > ul > li.active{
+  padding-left: 15px;
+  padding-right: 8px;
+  border-left-color: #337ab7;
+  background-color: #e2f2ff;
+}
+.techniques-list > ul > li.active:after{
+  content: initial;
+  display: block;
+  position: absolute;
+  right: -10px;
+  width: 20px;
+  height: 20px;
+  top: calc(50% - 10px);
+  transform: rotate(45deg);
+  border-top: 1px solid #e5e5e5;
+  border-right: 1px solid #e5e5e5;
+  background-color: blue;
+}
+.techniques-list .empty{
+  border-top : 1px solid #e5e5e5;
+  padding-top: 10px;
+  color: #777;
+  font-style: italic;
+}
+.techniques-list > ul > li + .empty,
+.techniques-list > ul > li + .empty + .empty{
+  display: none;
 }
 
 @-webkit-keyframes saving {
